Closed
Bug 158197
Opened 23 years ago
Closed 23 years ago
Horizontal rule (HR) doesn't align left or right
Categories
(Core :: Layout, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla1.1final
People
(Reporter: jblanco, Assigned: dbaron)
References
Details
(Keywords: html4, regression, testcase, Whiteboard: [patch] EDITORBASE-)
Attachments
(2 files)
|
379 bytes,
text/html
|
Details | |
|
1.67 KB,
patch
|
mjudge
:
review+
bzbarsky
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
I found this problem on OS/2 and Windows NT. Couldn't find this one in bugzilla.
-Open up Composer.
-Insert Horizontal Line. Default H. Line is inserted - centered and 100% of window
-Open the H. Line properties and size the line to 50% of the window and align
the H.Line to the left or right.
-Notice the line stays centered in Composer. The size does change.
Expected result - The H. Line should get aligned right or left, not remain centered.
I also noticed that the H. Line and Anchor buttons are no longer on the
Composition Toolbar.
Comment 1•23 years ago
|
||
The HTML looks just fine, e.g.:
<HR size="50%" align="right>
This seems to be a layout problem. Doesn't display correctly in Browser either.
Assignee: syd → attinasi
Component: Editor: Composer → Layout
QA Contact: sujay → petersen
Summary: Horizontal Line in Composer doesn't align left or right → Horizontal Line doesn't align left or right
Comment 2•23 years ago
|
||
For an example, I meant:
<hr width="50%" size="2" align="right">
This would seem to be an HTML correctness issue.
Comment 3•23 years ago
|
||
Updated•23 years ago
|
Priority: -- → P3
Updated•23 years ago
|
Whiteboard: EDITORBASE
Comment 4•23 years ago
|
||
Is this also related to dbaron's fix to bug 141054?
Assignee: attinasi → karnaze
Keywords: regression
use netscape7b1(20020614) to access the testcase, it works fine.
it is an regression happens after 0614.
Comment 6•23 years ago
|
||
I tested 3 DTDs:
standard: "-//W3C//DTD HTML 4.01//EN"
strict: "http://www.w3.org/TR/html4/strict.dtd"
transitional: "-//W3C//DTD HTML 4.01 Transitional//EN"
This bug only occurs using the transitional DTD.
--> david baron
Assignee: karnaze → dbaron
Whiteboard: EDITORBASE → EDITORBASE-, regression
Comment 8•23 years ago
|
||
*** Bug 160521 has been marked as a duplicate of this bug. ***
Comment 9•23 years ago
|
||
Please add "HR" to the description so that it shows up in searches for "HR
ALIGN". (I don't seem to have authority to do that.) "Horizontal Line" is
misnomerous.
Also note that this is only broken in QUIRKS mode. See these examples:
http://bw.org/mozilla/hr-loose.html
http://bw.org/mozilla/hr-quirks.html
--Bill
| Assignee | ||
Updated•23 years ago
|
Summary: Horizontal Line doesn't align left or right → Horizontal rule (HR) doesn't align left or right
| Assignee | ||
Comment 10•23 years ago
|
||
OK, here's a hacky fix. It just looks for the wrapper frame if we don't have a
real frame, and gets the style data from that instead. This hack is ugly, but
so is hr centering when we treat the HR as an inline...
| Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Whiteboard: EDITORBASE-, regression → [patch] EDITORBASE-
Target Milestone: --- → mozilla1.1beta
Comment 11•23 years ago
|
||
Comment on attachment 93918 [details] [diff] [review]
hacky fix
r/sr=bzbarsky
Attachment #93918 -
Flags: superreview+
Comment 12•23 years ago
|
||
looks good for what it does. I will put an r= on this. dbaron, can you look at
159207 and see what I am doing there to get around the selection and navigation
of HRframes?
Comment 13•23 years ago
|
||
Comment on attachment 93918 [details] [diff] [review]
hacky fix
marking r=
Attachment #93918 -
Flags: review+
| Assignee | ||
Updated•23 years ago
|
Whiteboard: [patch] EDITORBASE- → [patch] [open1.0.1] EDITORBASE-
Comment 14•23 years ago
|
||
Comment on attachment 93918 [details] [diff] [review]
hacky fix
a=asa (on behalf of drivers) for checkin to 1.1
Attachment #93918 -
Flags: approval+
| Assignee | ||
Comment 15•23 years ago
|
||
Fix checked into trunk, 2002-08-06 05:59 PDT.
Target Milestone: mozilla1.1beta → mozilla1.1final
Comment 16•23 years ago
|
||
a=chofmann for 1.0.1
| Assignee | ||
Comment 17•23 years ago
|
||
Fix checked in to MOZILLA_1_1_BRANCH, 2002-08-07 12:47 PDT.
Fix checked in to MOZILLA_1_0_BRANCH, 2002-08-08 14:28 PDT.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Keywords: fixed1.0.1
Resolution: --- → FIXED
Whiteboard: [patch] [open1.0.1] EDITORBASE- → [patch] EDITORBASE-
Comment 18•23 years ago
|
||
Verified on the Trunk builds : 0S X (2002-08-12-03) and Windows ME (2002-08-10-08).
Status: RESOLVED → VERIFIED
Comment 19•23 years ago
|
||
Verified on 2002-08-12-08 1.0 (Windows ME)and 2002-08-12-05 1.0 (OS X).
Keywords: verified1.0.1
Comment 20•23 years ago
|
||
*** Bug 165252 has been marked as a duplicate of this bug. ***
Comment 21•23 years ago
|
||
*** Bug 167284 has been marked as a duplicate of this bug. ***
Comment 22•23 years ago
|
||
*** Bug 167448 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•