Hacky fix to make HR's ALIGN attribute work again.  b=158197  r=mjudge  sr=bzbarsky